Update and rename monitor to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Other head elements -->
+
+  <!-- Google Analytics -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6V9CDKF6W"></script>
 <script>
@@ -7,3 +13,9 @@
 
   gtag('config', 'G-G6V9CDKF6W');
 </script>
+</head>
+<body>
+  {{ content }}
+</body>
+</html>
+
